--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -23,6 +23,20 @@
 
 }
 
+.light-mode{
+    --color-primary: #FFFFFF;
+    --color-secondary: #ae27a3;
+    --color-white: #454e56;
+    --color-black: #000;
+    --color-grey0: #f8f8f8;
+    --color-grey-1: #6c7983;
+    --color-grey-2: #6c7983;
+    --color-grey-3: #6c7983;
+    --color-grey-4: #454e56;
+    --color-grey-5: #f8f8f8;
+    --color-grey-6: #12181b;
+}
+
 body{
     background-color: var(--color-primary);
     font-family: 'Poppins', sans-serif;
@@ -74,12 +88,6 @@ section{
 }
 
 .sec3{
-    display: none;
-    transform: translateY(0) scale(1);
-
-}
-
-.sec4{
     display: none;
     transform: translateY(0) scale(1);
 
@@ -144,6 +152,29 @@ section{
     }
 }
 
+.theme-btn{
+    top:5%;
+    right: 3%;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background-color: var(--color-grey-4);
+    cursor: pointer;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 3px 15px rgba(0,0,0,.3);
+    transition: all .1s ease-in-out;
+    &:active{
+        transform: translateY(-5px);
+    }
+    i{
+        font-size: 1.4rem;
+        color: var(--color-grey-2);
+        pointer-events: none;
+    }
+}
 
 /* Header-content */
 
