--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,6 +7,23 @@
 }
 
 :root{
+    --color-primary: #ffffff;
+    --color-secondary: #be7765;
+    --color-white: #454e56;
+    --color-black: #000;
+    --color-grey0: #f8f8f8;
+    --color-grey-1: #6c7983;
+    --color-grey-2: #6c7983;
+    --color-grey-3: #6c7983;
+    --color-grey-4: #454e56;
+    --color-grey-5: #f8f8f8;
+    --color-grey-6: #12181b;
+    --br-sm-2: 14px;
+    --box-shadow-1: 0 3px 15px rgba(0,0,0,.2)
+
+}
+
+.light-mode{
     --color-primary: #191d2b;
     --color-secondary: #27AE60;
     --color-white: #FFFFFF;
@@ -20,21 +37,6 @@
     --color-grey-6: #12181b;
     --br-sm-2: 14px;
     --box-shadow-1: 0 3px 15px rgba(0,0,0,.2)
-
-}
-
-.light-mode{
-    --color-primary: #FFFFFF;
-    --color-secondary: #ae27a3;
-    --color-white: #454e56;
-    --color-black: #000;
-    --color-grey0: #f8f8f8;
-    --color-grey-1: #6c7983;
-    --color-grey-2: #6c7983;
-    --color-grey-3: #6c7983;
-    --color-grey-4: #454e56;
-    --color-grey-5: #f8f8f8;
-    --color-grey-6: #12181b;
 }
 
 body{
@@ -186,8 +188,8 @@ section{
         display: flex;
         align-items: center;
         position: relative;
-        .h-shape{
-            transition: all 4s ease-in-out;
+        .h-shape {
+            transition: all .4s ease-in-out;
             width: 65%;
             height: 100%;
             background-color: var(--color-secondary);
@@ -386,6 +388,17 @@ section{
         position: relative;
         padding-right: 3rem;
         border-left: 1px solid var(--color-grey-5);
+        transition: all .4s ease-in-out;
+        box-shadow: 1px 2px 15px rgba(0,0,0,.1);
+        border: 1px solid var(--color-grey-5);
+        border-radius: 5px;
+        margin-left: 25px;
+            &:hover {
+                cursor: default;
+                transform: translateY(-5px);
+                border: 1px solid var(--color-secondary);
+                box-shadow: 1px 4px 15px rgba(0,0,0,.32);
+            }
         .tl-icon{
             position: absolute;
             left: -56px;
