changed the theme color to lightblue

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,7 +8,7 @@
 
 :root{
     --color-primary: #ffffff;
-    --color-secondary: #be7765;
+    --color-secondary: #65bebc;
     --color-white: #454e56;
     --color-black: #000;
     --color-grey0: #f8f8f8;
