--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -12,11 +12,11 @@
     --color-white: #454e56;
     --color-black: #000;
     --color-grey0: #f8f8f8;
-    --color-grey-1: #6c7983;
+    --color-grey-1: #e5e6e7;
     --color-grey-2: #6c7983;
     --color-grey-3: #6c7983;
     --color-grey-4: #454e56;
-    --color-grey-5: #f8f8f8;
+    --color-grey-5: #2a2e35;
     --color-grey-6: #12181b;
     --br-sm-2: 14px;
     --box-shadow-1: 0 3px 15px rgba(0,0,0,.2)
@@ -29,11 +29,11 @@
     --color-white: #FFFFFF;
     --color-black: #000;
     --color-grey0: #f8f8f8;
-    --color-grey-1: #dbe1e8;
+    --color-grey-1: #16181d;
     --color-grey-2: #b2becd;
     --color-grey-3: #6c7983;
     --color-grey-4: #454e56;
-    --color-grey-5: #2a2e35;
+    --color-grey-5: #f8f8f8;
     --color-grey-6: #12181b;
     --br-sm-2: 14px;
     --box-shadow-1: 0 3px 15px rgba(0,0,0,.2)
@@ -56,7 +56,7 @@ a{
 }
 
 header{
-    height: 100vh;
+    min-height: 100vh;
     color: var(--color-white);
     overflow: hidden;
 }
@@ -183,7 +183,7 @@ section{
 .header-content{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    height: 100%;
+    min-height: 100vh;
     .left-header{
         display: flex;
         align-items: center;
@@ -683,12 +683,14 @@ section{
             position: absolute;
             top: 50%;
             left: 50%;
-            color: var(--color-grey-5);
+            color: var(--color-grey-1);
             transition: all .4s ease-in-out;
             z-index: -1;
             transform: translate(-50%, -50%);
             font-weight: 800;
-            font-size: 6.3rem;
+            font-size: 6rem;
         }
     }
 }
+
+@import './media';
