--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,7 +11,7 @@
     --color-white: #ffffff;
     --color-black: #000;
     --color-grey0: #f8f8f8;
-    --color-grey-1: #16181d;
+    --color-grey-1: #cbccce;
     --color-grey-2: #b2becd;
     --color-grey-3: #6c7983;
     --color-grey-4: #454e56;
@@ -409,6 +409,7 @@ section {
             text-transform: uppercase;
             font-weight: 500;
             padding-left: 5px;
+            color: var(--color-secondary);
         }
         h5 {
             padding: 1rem 0;
@@ -548,7 +549,7 @@ section {
             a {
                 display: flex;
                 align-items: center;
-                color: var(--color-white);
+                color: var(--color-primary);
                 background-color: var(--color-grey-5);
                 cursor: pointer;
                 justify-content: center;
